@@ -6,6 +6,8 @@ NOCC 1.6  ?? ??, ??
     * Patch #1894098 : Use <ul> for main menu (Tim Gerundt).
 
   Misc
+    * Add "pngfix.js" to handle PNG transparency in Win IE 5.5 & 6 correctly
+      (Tim Gerundt).
     * Reorganize some files (Arnaud Boudou).
     * Add trash can feature on IMAP accounts (Arnaud Boudou).
 
